--- a/src/scss/molecules/_social-media-links.scss
+++ b/src/scss/molecules/_social-media-links.scss
@@ -9,19 +9,6 @@
   background-color: rgba(255, 255, 255, 0) !important;
 }
 
-.social-media-links {
-  display: flex;
-  justify-content: center;
-}
-
-// .social-icon {
-//   height: 42px;
-
-//   img {
-//     max-width: 32px;
-//   }
-// }
-
 #footer .si-facebook:hover,
 .si-colored.si-facebook {
   background: none !important;
@@ -30,4 +17,21 @@
 #footer .si-vimeo:hover,
 .si-colored.si-vimeo {
   background: none !important;
+}
+
+.social-media-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 30px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+    text-align: left;
+  }
+}
+
+.custom-icon-scout {
+  padding-right: 20px;
+  max-height: 100px;
 }
