--- a/src/scss/globals/_vars.scss
+++ b/src/scss/globals/_vars.scss
@@ -21,6 +21,7 @@ $ff-raleway: 'Raleway', sans-serif;
 $ff-roboto: 'Roboto', sans-serif;
 $ff-roboto-condensed: 'Roboto Condensed', sans-serif;
 $ff-sanchez: 'Sanchez', serif;
+$ff-unna: 'Unna', serif;
 
 //Spacing
 $spacing-xs: 5px;
