--- a/src/scss/atoms/_fonts.scss
+++ b/src/scss/atoms/_fonts.scss
@@ -96,7 +96,7 @@ h2 {
   text-transform: none;
   font-weight: 900;
   font-family: $ff-mont;
-  color: #157a9e;
+  color: #6c54a3;
 
   @include h2();
 
