--- a/src/scss/organisms/_forms.scss
+++ b/src/scss/organisms/_forms.scss
@@ -1,14 +1,5 @@
-#section-team {
-  max-width: 100%;
-  height: auto;
-
-  @media (min-width: 1200px) {
-    background-position: center;
-  }
-}
-
 #section-forms {
-  background-color: #cbe6f8;
+  background-color: #ebebeb;
   padding: 15px 0;
   border-bottom: solid 2px #fff;
 
@@ -25,7 +16,7 @@
     padding-bottom: 15px;
 
     &__title {
-      color: #3b3b3b;
+      // color: #3b3b3b;
       line-height: 1;
       padding-bottom: 0;
       padding-top: 10px;
@@ -34,7 +25,9 @@
 
     &__copy {
       color: #3b3b3b;
-      font-family: $ff-open;
+      font-family: $ff-unna;
+      font-style: italic;
+      font-weight: 700;
       padding-top: 20px;
     }
   }
@@ -52,7 +45,9 @@
 
     &__copy {
       color: #3b3b3b;
-      font-family: $ff-open;
+      font-family: $ff-unna;
+      font-style: italic;
+      font-weight: 700;
     }
 
     &a:hover {
@@ -67,7 +62,7 @@
 
 .forms-btn {
   margin: 10px 0;
-  padding: 10px;
+  width: 275px;
   font-weight: 400;
 }
 
