--- a/src/templates/organisms/forms.twig
+++ b/src/templates/organisms/forms.twig
@@ -1,8 +1,3 @@
-<div id="section-team">
-    <img src="/assets/team/team-photo.jpg" alt="Dr. Nelson's Team" class ="hidden-xs hidden-sm">
-    <img src="/assets/team/team-mobile.jpg" alt="Dr. Nelson's Team" class ="hidden-md hidden-lg">
-</div>
-
 <section id="section-forms">
     <div class="container center">
         <div class="heading">
@@ -11,8 +6,19 @@
         <p class="forms__copy">Click here if you have already scheduled your new patient exam and need to provide our practice with your health&nbsp;history&nbsp;information.</p>
         <div class="forms__btn-wrapper">
             <div class="row">
-                <div class="column">
-                    <a href="https://www.ident.ws/template_include/new_patient_sign_in.do?site=5816&practiceId=23452&page=New+Patient+Sign+In" target="_blank" class="btn btn--style-three forms-btn">LEARN MORE</a>
+                <div class="column column__left">
+                    <a href="/assets/forms/New-Patient-Form.pdf" target="_blank" class="btn btn--style-three forms-btn">New Patient Form</a>
+                </div>
+                <div class="column column__left">
+                    <a href="/assets/forms/HIPAA-Disclosure.pdf" target="_blank" class="btn btn--style-three forms-btn">HIPAA Disclosure</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column column__right">
+                    <a href="/assets/forms/Notice-of-Privacy.pdf" target="_blank" class="btn btn--style-three forms-btn">Privacy Policy</a>
+                </div>
+                <div class="column column__right">
+                    <a href="/assets/forms/Notice-of-HIPAA.pdf" target="_blank" class="btn btn--style-three forms-btn">Notice of HIPAA</a>
                 </div>
             </div>
         </div>
