--- a/src/scss/globals/_mixins.scss
+++ b/src/scss/globals/_mixins.scss
@@ -96,7 +96,7 @@
 /// @example #section
 @mixin birdeye-footer($color:white, $shadow:false) {
   .bf-dv {
-    padding-top: 30px;
+    // padding-top: 30px;
     color: $color !important;
 
     @if $shadow {
