--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -4,9 +4,9 @@
     </div> #}
 
     <div class="container">
-        <div class="col-sm-6 col-sm-push-1">
+        <div class="col-xs-12 col-md-4 col-lg-6">
             <h2 class="heading">Patient Reviews</h2>
-            <img src="/assets/reviews.jpg" alt="Reviewers" class="hidden-sm hidden-md hidden-lg reviews-mobile">
+            <h5 class="reviews__byline">Over 500 5-star reviews! Find out why Raleigh loves to visit Smiles at Glenwood for their dentistry.</h5>
             <div id="bf-revz-widget-{{ birdeye }}" style="-webkit-overflow-scrolling:touch;">
             </div>
             <div class="row">
@@ -14,4 +14,5 @@
             </div>
         </div>
     </div>
+            <img src="/assets/reviews-mobile.jpg" alt="Reviewers" class="hidden-md hidden-lg reviews-mobile">
 </section>
