--- a/src/index.twig
+++ b/src/index.twig
@@ -45,15 +45,13 @@
             existingPatients: 'true'
          } %} #}
 
-        {% include 'organisms/reviews.twig' %}
+        {# {% include 'organisms/reviews.twig' %} #}
 
         {# {% include 'organisms/forms.twig' %} #}
 
-        {# {% include 'organisms/smile-gallery.twig' %}
-
-        {% include 'organisms/tour.twig' %} #}
-        
         {# {% include 'organisms/location.twig' %} #}
+
+        {% include 'molecules/slab__care-credit.twig' %}
 
     </div>
 
