--- a/src/scss/molecules/__slab__care-credit.scss
+++ b/src/scss/molecules/__slab__care-credit.scss
@@ -1,13 +1,19 @@
 #section-care-credit-slab {
-  background-color: #e6f3fb;
+  background-color: rgba(171, 156, 251, 0.3);
   padding-top: 30px;
   padding-bottom: 35px;
   text-align: center;
 
   .care-credit-slab {
+    &__title {
+      margin-bottom: 0;
+    }
+
     &__copy {
       margin-bottom: 0;
-      // color: #4e4e4e;
+      font-style: italic;
+      font-weight: 700;
+      font-family: $ff-unna;
     }
 
     &__logo {
