--- a/src/templates/atoms/hours-table.twig
+++ b/src/templates/atoms/hours-table.twig
@@ -1,5 +1,5 @@
 <div class="hours-table">
-    <h5>Office Hours:</h5>
+    <h5>Hours</h5>
     {#<table >#}
         {#<tbody>#}
         {#<tr>#}
@@ -24,9 +24,6 @@
         {#</tr>#}
         {#</tbody>#}
     {#</table>#}
-    <p>Mon-Weds</p>
-    <p>8:00 AM - 5:00 PM</p>
-    <p>Thursday</p>
-    <p>8:00 AM - 4:00 PM</p>
-    <p>Closed Friday</p>
+    <p>Mon – Thu 8:00am – 4:00pm</p>
+    <p>Friday: By Appointment Only</p>
 </div>
