--- a/src/index.twig
+++ b/src/index.twig
@@ -47,9 +47,9 @@
 
         {# {% include 'organisms/reviews.twig' %} #}
 
-        {# {% include 'organisms/forms.twig' %} #}
+        {% include 'organisms/forms.twig' %}
 
-        {# {% include 'organisms/location.twig' %} #}
+        {% include 'organisms/location.twig' %}
 
         {% include 'molecules/slab__care-credit.twig' %}
 
