--- a/src/scss/molecules/_buttons.scss
+++ b/src/scss/molecules/_buttons.scss
@@ -2,8 +2,8 @@ a.btn,
 button.btn {
   font-family: $ff-mont;
   // font-weight: 900 !important;
-  background-color: #6fba11;
-  color: #fff;
+  background-color: #f6b40f;
+  color: #000;
   // border: solid 2px #fff;
   padding: 10px 40px;
   // text-transform: uppercase;
@@ -13,8 +13,8 @@ button.btn {
 
   &:hover,
   &:focus {
-    background-color: darken(#6fba11, 10%);
-    color: #fff;
+    background-color: lighten(#f6b40f, 10%);
+    color: #000;
     // box-shadow: 0 3px rgba(179, 77, 6, 1);
     transition: all 0.3s ease;
     text-decoration: none;
