--- a/src/templates/molecules/location-card__simple.twig
+++ b/src/templates/molecules/location-card__simple.twig
@@ -5,14 +5,15 @@
     {#</div>#}
 
     <div class="location-card__logo--wrapper">
-        <img  src="assets/logo-bottom.svg" alt="{{ mainDoctor }}" class="location-card__logo">
+        <img  src="assets/logo.png" alt="{{ mainDoctor }}" class="location-card__logo">
     </div>
 
     <div class="location-card__content">
 
-        {# <h6 class="location-card__doctor">B.C. Nelson, <span class="location-card__doctor--title">DDS</span></h6> #}
+        <h6 class="location-card__doctor">Candice T. Arrick, <span class="location-card__doctor--title">DDS</span></h6>
 
-        <p class="location-card__address">{{ addressFirst }}<br>{{ addressLast }}</p>
+        <p class="location-card__address">{{ addressFirst }}</p>
+        {# <p class="location-card__address">{{ addressFirst }}<br>{{ addressLast }}</p> #}
 
         <a href="{{ googleMap }}" target="_blank" class="link-no-style ">
             <h6 class="location-card__map-link underline">Click for map & directions</h6>
@@ -21,10 +22,14 @@
         {% include 'atoms/hours-table.twig' %}
 
         {#<h5 class="location-card__welcoming-patients">Now Welcoming New Patients</h5>#}
-        <p class="location-card__new-patient-text">Now Welcoming New Patients</p>
+        <p class="location-card__new-patient-text">New Patient Hotline</p>
         <a href="tel:{{ newPhone }}" class="location-card__new-patient-number">{{ newPhoneNoBreak }}</a>
-        <p class="location-card__existing-patient-text">Existing patients:
+        <p class="location-card__existing-patient-text">
+            Existing Patients:
             <a href="tel:{{ existingPhone }}" class="link-no-style location-card__existing-patient-number">{{ existingPhoneNoBreak }}</a>
+            <br>
+            Fax:
+            <a href="fax:{{ fax }}" class="link-no-style location-card__existing-patient-number">{{ faxNoBreak }}</a>
         </p>
 
         {% include 'atoms/request-appointment-button.twig' with {
