--- a/src/templates/molecules/cta__two-to-one.twig
+++ b/src/templates/molecules/cta__two-to-one.twig
@@ -16,18 +16,18 @@
             </div>
             
             {# item two #}
-            <div class="vertical-break"></div>
+            {# <div class="vertical-break"></div> #}
             {# item three #}
             <div class="cta__btn flex-wrapper__item">
                 {% include 'atoms/request-appointment-button.twig' with {
-                    classes: "btn"
+                    classes: "btn cta-btn"
                 }%}
             </div>
         </div>
         {% if existingPatients %}
             {#The intention behind two paragraphs (one for mobile, one for desktop), is to accommodate Eric's design requests that the text change #}
-            <p class="cta__existing-patient hidden-sm hidden-md hidden-lg">Existing Patients<br> {% include 'atoms/existing-patient-number.twig' %}</p>
-            <p class="cta__existing-patient hidden-xs">Existing Patients:  {% include 'atoms/existing-patient-number.twig' %}</p>
+            <p class="cta__existing-patient hidden-sm hidden-md hidden-lg">Existing Patients Call:<br> {% include 'atoms/existing-patient-number.twig' %}</p>
+            <p class="cta__existing-patient hidden-xs">Existing Patients Call:  {% include 'atoms/existing-patient-number.twig' %}</p>
         {% endif %}
     </div>
 </div>
