--- a/src/index.twig
+++ b/src/index.twig
@@ -21,7 +21,7 @@
   ============================================= -->
   <div id="content" >
 
-        {% include 'molecules/cta__two-to-one.twig' with {
+        {# {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-one',
             existingPatients: 'true'
          } %}
@@ -34,11 +34,11 @@
 
         {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-two'
-        } %}
+        } %} #}
 
         {% include 'organisms/insurance.twig' %}
 
-        {% include 'organisms/services.twig' %}
+        {# {% include 'organisms/services.twig' %}
 
         <div class="cta " id="cta-three">
             <div class="container center">
@@ -63,7 +63,7 @@
 
         {% include 'organisms/location.twig' %}
 
-        {% include 'molecules/slab__care-credit.twig' %}
+        {% include 'molecules/slab__care-credit.twig' %} #}
 
     </div>
 
