--- a/src/templates/organisms/insurance.twig
+++ b/src/templates/organisms/insurance.twig
@@ -7,15 +7,17 @@
                     <img src="/assets/insurance.jpg" alt="{{ mainDoctor }}'s happy patients" class="insurance__image mobile-insurance">
                 </div>
             </div>
-            <div class="hidden-xs col-sm-6 col-lg-6">
+            <div class="hidden-xs col-sm-7">
                 <h2 class="title">No Insurance?</h2>
                 <h3 class="sub-title">Our patients don’t need it!</h3>
                 {# <h3 class="preventative-care">Get your preventive care for a low monthly fee.</h3> #}
                 {# <p class="insurance__copy">Exclusively for our uninsured patients.</p> #}
                 {# <p class="insurance__copy hidden-xs hidden-sm "> Make easy monthly payments for your preventive care.</p>
                 <p class="insurance__copy hidden-md hidden-lg"> Make easy monthly payments</p> #}
-                <p class="insurance__copy insurance__copy--last">Join our Membership Club and get your preventive care for a low monthly fee</p>
-                <a class="btn btn--style-two insurance-btn"  href="{{ insuranceLink }}" target="_blank">Learn More</a>
+                <p class="insurance__copy insurance__copy--last">Join our 
+                    <span class="membershipClub">Smiles At Glenwood Membership Club</span>
+                and get your preventive care for a low monthly fee</p>
+                <a class="btn btn--style-two insurance-btn" href="{{ insuranceLink }}" target="_blank">Learn More</a>
             </div>
             <div class="center hidden-sm hidden-md hidden-lg">
                 <h3 class="sub-title">Our patients don’t need it!</h3>
