--- a/src/index.twig
+++ b/src/index.twig
@@ -26,15 +26,13 @@
             existingPatients: 'true'
          } %}
 
-        {% include 'organisms/about.twig' %}
-
-        {% include 'molecules/team__carousel.twig' %}
+        {% include 'organisms/about.twig' %} #}
 
         {% include 'organisms/specials--three-card.twig' %}
 
         {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-two'
-        } %} #}
+        } %}
 
         {% include 'organisms/insurance.twig' %}
 
