--- a/src/scss/organisms/_specials--three-card.scss
+++ b/src/scss/organisms/_specials--three-card.scss
@@ -12,28 +12,35 @@
     @include font-size(36px, 34px, 34px, 34px, 32px);
 
     &__title {
-      margin-bottom: 15px;
+      margin-bottom: 0;
       line-height: 1;
-      color: #fff;
-      text-shadow: 2px 3px 11px #000;
+      color: #80f7ff;
+      font-weight: 700;
+      font-style: italic;
+      font-family: $ff-unna;
+      // text-shadow: 2px 3px 11px #000;
     }
 
     &__sub-title {
-      color: #fff;
-      font-size: 14px;
-      margin-bottom: 15px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      text-shadow: 2px 3px 11px #000;
+      color: #ffd466;
+      font-size: 24px;
+      font-style: italic;
+      font-family: $ff-unna;
+      // margin-bottom: 15px;
+      padding-top: 0;
+      padding-bottom: 5px;
+      // text-shadow: 2px 3px 11px #000;
     }
 
     &__byline {
       color: #fff;
       font-weight: 900;
-      margin-bottom: 5px;
-      text-shadow: 3px 3px 5px #000;
+      margin-bottom: 0;
+      font-family: $ff-mont;
+      line-height: 1.3;
+      // text-shadow: 3px 3px 5px #000;
 
-      @include font-size(32px, 30px, 27px, 28px, 19px);
+      @include font-size(36px, 34px, 32px, 28px, 18px);
     }
   }
 
@@ -61,19 +68,20 @@
     flex-direction: column;
 
     &__top {
-      border-bottom: 5px solid rgba(0, 0, 0, 0);
+      // border-bottom: 5px solid rgba(0, 0, 0, 0);
       padding-top: 25px;
-      border-top-left-radius: 0;
-      border-top-right-radius: 0;
+      border-bottom-left-radius: 6px;
+      border-bottom-right-radius: 6px;
     }
 
     &__bottom {
-      background-color: rgba(255, 255, 255, 0.8);
-      margin-top: 0;
+      background-color: rgba(255, 255, 255, 1);
+      margin-top: 7px;
       padding-top: 80px;
       padding-left: 20px;
       padding-right: 20px;
       flex-grow: 1;
+      border-radius: 6px;
     }
 
     &__cost {
@@ -84,22 +92,22 @@
       margin-bottom: -85px;
       margin-left: auto;
       margin-right: auto;
-      width: 165px;
-      height: 165px;
+      width: 150px;
+      height: 150px;
       border: solid 3px white;
-      border-radius: 50%;
+      // border-radius: 50%;
       color: white;
       font-weight: 900;
       font-family: $ff-lato;
-      font-size: 80px;
+      font-size: 95px;
       font-style: normal;
 
       &::before {
         content: '$';
         position: absolute;
-        font-size: 30px;
-        left: 21px;
-        top: 35px;
+        font-size: 36px;
+        left: 6px;
+        top: 20px;
         font-family: $ff-lato;
         font-weight: 400;
       }
@@ -111,26 +119,33 @@
     }
 
     &__title {
-      font-family: $ff-lato;
+      font-family: $ff-mont;
       color: #fff;
-      font-weight: 700;
+      font-weight: 400;
       line-height: 1.1;
       margin-bottom: 10px;
+
+      &-bold {
+        font-weight: 700 !important;
+        font-family: $ff-mont;
+        color: #fff;
+      }
     }
 
     &__copy {
-      color: #424242;
+      color: #999;
       font-family: $ff-lato;
       line-height: 1.4;
-      margin-bottom: 70px;
+      margin-bottom: 55px;
       font-size: 17px;
     }
 
     &__codes {
       padding-top: 30px;
-      color: #000;
+      color: #999;
       font-size: 14px;
       // margin-bottom: 65px;
+      font-family: $ff-unna;
       position: absolute;
       left: 0;
       right: 0;
@@ -139,44 +154,43 @@
 
     &:nth-child(1) {
       .specials-card__top {
-        background-color: rgba(36, 135, 170, 0.8);
+        background-color: rgba(64, 124, 204, 0.7);
       }
 
       .specials-card__cost {
-        background-color: rgba(11, 153, 203, 1);
+        background-color: rgba(64, 124, 204, 1);
       }
 
       .specials-card__savings {
-        color: #009bd0;
+        color: #407ccc;
       }
     }
 
     &:nth-child(2) {
       .specials-card__top {
-        background-color: rgba(255, 130, 0, 0.8);
+        background-color: rgba(188, 84, 95, 0.7);
       }
 
       .specials-card__cost {
-        background-color: rgba(255, 130, 0, 1);
+        background-color: rgba(188, 84, 95, 1);
       }
 
       .specials-card__savings {
-        color: #ff7a00;
-        border-radius: 50%;
+        color: #bc545f;
       }
     }
 
     &:nth-child(3) {
       .specials-card__top {
-        background-color: rgba(0, 166, 148, 0.8);
+        background-color: rgba(150, 119, 218, 0.7);
       }
 
       .specials-card__cost {
-        background-color: #00a694;
+        background-color: rgba(150, 119, 218, 1);
       }
 
       .specials-card__savings {
-        color: #00a694;
+        color: #9677da;
       }
     }
   }
