--- a/src/templates/organisms/insurance.twig
+++ b/src/templates/organisms/insurance.twig
@@ -21,7 +21,7 @@
             </div>
             <div class="center hidden-sm hidden-md hidden-lg">
                 <h3 class="sub-title">Our patients don’t need it!</h3>
-                <p class="insurance__copy insurance__copy--last">Join the Big Sky Dental Clinic Membership Club and get your preventive care for a low monthly fee</p>
+                <p class="insurance__copy insurance__copy--last">Smiles At Glenwood Membership Club</span> and get your preventive care for a low monthly fee</p>
                 <a class="btn btn--style-two insurance-btn"  href="{{ insuranceLink }}" target="_blank">Learn More</a>
             </div>
         </div>
