🔬  Services (Custom Section, 4 rows with crazy splits)

--- a/src/index.twig
+++ b/src/index.twig
@@ -36,11 +36,11 @@
 
         {% include 'organisms/insurance.twig' %} #}
 
-        {# {% include 'organisms/services.twig' %} #}
+        {% include 'organisms/services.twig' %}
 
         {% include 'molecules/dentures.twig' %}
 
-        <div class="cta " id="cta-three">
+        {# <div class="cta " id="cta-three">
             <div class="container center">
                 <div class="flex-wrapper">
                     <div class="cta__btn flex-wrapper__item">
@@ -63,7 +63,7 @@
 
         {% include 'organisms/location.twig' %}
 
-        {% include 'molecules/slab__care-credit.twig' %}
+        {% include 'molecules/slab__care-credit.twig' %} #}
 
     </div>
 
