--- a/src/templates/organisms/services.twig
+++ b/src/templates/organisms/services.twig
@@ -2,46 +2,31 @@
     <div class="container">
 
         <h2 class="services__heading center">Our Services</h2>
-        <p class="services__byline center">Select a link below to learn more.</p>
+        <p class="services__byline center">Select a link below to learn more about our services</p>
 
-        {# ======= Cerec &  Implant Dentistry ======= #}
+        {# ======= Smile Makeovers &  Implant Dentistry ======= #}
 
-            <div class="col-xs-12 col-sm-6 col-md-12 card">
-                <img src="/assets/services/cerec.jpg" alt="Cerec" class="hidden-xs hidden-sm">
-                <img src="/assets/services/tabletDown/cerec.jpg" alt="Cerec" class="hidden-md hidden-lg">
-                <div class="card__text">
-                    <h3 class="card__title hidden-md hidden-lg">Cerec®</h3>
-                    <h3 class="feature__title hidden-xs hidden-sm">Cerec® One-Visit<br>Restorations</h3>
-                    <p class="hidden-sm hidden-xs white cerec-p-width">CEREC® technology allows our practice to create tooth-colored porcelain restorations for healthy, beautiful smiles in a single appointment. Crowns should be placed before the tooth is so decayed that it may fracture. This can often help prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown applied, a porcelain bridge may be a good alternative.</p>
+            <div class="col-xs-12 col-md-9 card">
+                <img src="/assets/services/makeover.jpg" alt="Smile Makeover Image" class="hidden-xs card__image--fix">
+                <img src="/assets/services/makeover-mobile.jpg" alt="Smile Makeover Image" class="hidden-sm hidden-md hidden-lg">
+                <div class="card__text hidden-xs col-sm-6 col-sm-offset-5">
+                    <h3 class="feature__title">Smile Makeovers</h3>
+                    <p class="white">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile will increase self-confidence and overall life satisfaction. Cosmetic dentistry includes things like tooth-colored restorations, dental implants, and crowns. We have many options, so please call us today!</p>
                 </div>
             </div>
             <div class="hidden-sm hidden-md hidden-lg">
-                <p class="col-xs-12 xs-text-beneath">CEREC® technology allows our practice to create tooth-colored porcelain restorations for healthy, beautiful smiles in a single appointment. Crowns should be placed before the tooth is so decayed that it may fracture. This can often help prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown applied, a porcelain bridge may be a good alternative.</p>
+                <h3 class="col-xs-12 purple-title hidden-md hidden-lg">Smile Makeovers</h3>
+                <p class="col-xs-12 xs-text-beneath">Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile will increase self-confidence and overall life satisfaction. Cosmetic dentistry includes things like tooth-colored restorations, dental implants, and crowns. We have many options, so please call us today!</p>
             </div>
 
-
-            <div class="col-xs-12 col-sm-6 card">
-                <img src="/assets/services/implants.jpg" alt="implants" class="card__image--fix">
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--implant" data-toggle="modal"><img src="/assets/services/implant.jpg" alt="implant" class="card__image">
                 <div class="card__text">
-                    <h3 class="feature__title hidden-md hidden-lg">Implant<br>Dentistry</h3>
-                    <h3 class="feature__title hidden-xs hidden-sm">Implant Dentistry</h3>
-                    <p class="hidden-sm hidden-xs white implant-p-width">Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
+                    <h5 class="card__title">Implant<br>Dentistry</h5>
+                    <p class="card__link">Learn More</p>
                 </div>
             </div>
-            <div class="hidden-sm hidden-md hidden-lg">
-                <p class="col-xs-12 xs-text-beneath">Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
-            </div>
 
-            <div class="col-sm-6 hidden-xs hidden-md hidden-lg">
-                <p class="xs-text-beneath">CEREC® technology allows our practice to create tooth-colored porcelain restorations for healthy, beautiful smiles in a single appointment. Crowns should be placed before the tooth is so decayed that it may fracture. This can often help prevent the expense of root canal therapy in the future. If a tooth is too damaged to have a crown applied, a porcelain bridge may be a good alternative.</p>
-            </div>
-
-            <div class="col-sm-6 hidden-xs hidden-md hidden-lg">
-                <p class="xs-text-beneath">Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
-            </div>
-
-        {# ======= Row # 2 ======= #}
-
+        {# ======= Row # 2 - Veneers & Sleep Apnea ======= #}
             <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--veneers" data-toggle="modal"><img src="/assets/services/veneers.jpg" alt="Veneers" class="card__image">
                 <div class="card__text">
                     <h5 class="card__title">Veneers</h5>
@@ -49,53 +34,77 @@
                 </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--restorations" data-toggle="modal"><img src="/assets/services/restorations.jpg" alt="Tooth Colored Restorations" class="card__image">
+            <div class="col-xs-12 col-md-9 card">
+                <img src="/assets/services/apnea.jpg" alt="apnea" class="hidden-xs card__image--fix">
+                <img src="/assets/services/apnea-mobile.jpg" alt="apnea"  class="hidden-sm hidden-md hidden-lg">
+                <div class="card__text hidden-xs col-sm-6 col-sm-offset-5">
+                    <h3 class="feature__title hidden-sm">Sleep Apnea Treatment</h3>
+                    <h3 class="feature__title visible-sm">Sleep Apnea</h3>
+                    <p class="white">Obstructive sleep apnea occurs when the airway completely collapses, blocking airflow into the lungs. The harder one tries to breathe, the tighter the airway seals. This airway obstruction persists until the brain partially awakens the person, unconsciously closing the jaw and returning the tongue and throat to a normal position.</p>
+                </div>
+            </div>
+            <div class="hidden-sm hidden-md hidden-lg">
+                <h3 class="col-xs-12 purple-title hidden-md hidden-lg">Sleep Apnea Treatment</h3>
+                <p class="col-xs-12 xs-text-beneath">Obstructive sleep apnea occurs when the airway completely collapses, blocking airflow into the lungs. The harder one tries to breathe, the tighter the airway seals. This airway obstruction persists until the brain partially awakens the person, unconsciously closing the jaw and returning the tongue and throat to a normal position.</p>
+            </div>
+
+            {# ======= Row # 3 ======= #}
+
+            <div class="col-xs-12 col-md-6 card">
+                <img src="/assets/services/invisalign.jpg" alt="Invisalign Image" class="hidden-xs card__image--fix">
+                <img src="/assets/services/invisalign-mobile.jpg" alt="Smile Makeover Image" class="hidden-sm hidden-md hidden-lg">
+                <div class="card__text hidden-xs col-sm-5">
+                    <h3 class="feature__title">Invisalign®<br>Orthodontics</h3>
+                    <p class="invisalign">These “invisible” aligners are the latest in orthodontic technology for adults and teens. Get the smile you've always wanted with Invisalign® Orthodontics.</p>
+                </div>
+            </div>
+            <div class="hidden-sm hidden-md hidden-lg">
+                <h3 class="col-xs-12 purple-title hidden-md hidden-lg">Invisalign®<br>Orthodontics</h3>
+                <p class="col-xs-12 xs-text-beneath">These “invisible” aligners are the latest in orthodontic technology for adults and teens. Get the smile you've always wanted with Invisalign® Orthodontics.</p>
+            </div>
+
+
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--crowns" data-toggle="modal"><img src="/assets/services/crowns.jpg" alt="Crowns" class="card__image">
                 <div class="card__text">
-                    <h5 class="card__title hidden-xs hidden-sm">Tooth Colored Restorations</h5>
-                    <h5 class="card__title hidden-md hidden-lg">Tooth Colored<br>Restorations</h5>
+                    <h5 class="card__title">Crowns</h5>
                     <p class="card__link">Learn More</p>
                 </div>
             </div>
 
-            <div class="col-xs-12 col-md-6 card" data-target="#modal--makeovers" data-toggle="modal">
-                <img src="/assets/services/makeovers.jpg" alt="Smile Makeovers" class="feature__image hidden-xs">
-                <img src="/assets/services/tabletDown/makeovers.jpg" alt="Smile Makeovers" class="feature__image hidden-sm hidden-md hidden-lg">
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--family" data-toggle="modal"><img src="/assets/services/family.jpg" alt="Care for the Whole Family" class="card__image">
                 <div class="card__text">
-                    <h3 class="feature__title hidden-sm hidden-md hidden-lg">Smile<br>Makeovers</h3>
-                    <p class="card__link hidden-sm hidden-md hidden-lg">Learn More</p>
-                </div>
-                <div class="card__text center-left">
-                    <h3 class="feature__title hidden-xs">Smile<br>Makeovers</h3>
-                    <p class="card__link hidden-xs">Learn More</p>
-                </div>
-            </div>
-
-        {# ======= Row # 3 ======= #}
-
-            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--dentures" data-toggle="modal"><img src="/assets/services/dentures.jpg" alt="Dentures" class="card__image">
-                <div class="card__text">
-                    <h5 class="card__title">Dentures</h5>
+                    <h5 class="card__title">Care for the<br>Whole Family</h5>
                     <p class="card__link">Learn More</p>
                 </div>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--mercuryFree" data-toggle="modal"><img src="/assets/services/mercuryFree.jpg" alt="Mercury-Free Restorations" class="card__image">
+        {# ======= Row # 4 ======= #}
+
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--whitening" data-toggle="modal"><img src="/assets/services/whitening.jpg" alt="Smile Whitening" class="card__image">
                 <div class="card__text">
-                    <h5 class="card__title">Mercury-Free</h5>
+                    <h5 class="card__title">Smile<br>Whitening</h5>
                     <p class="card__link">Learn More</p>
                 </div>
             </div>
 
-            <div class="col-xs-12 col-md-6 card" data-target="#modal--family" data-toggle="modal">
-                <img src="/assets/services/family.jpg" alt="Family Care" class="card__image hidden-xs">
-                <img src="/assets/services/tabletDown/family.jpg" alt="Family Care" class="card__image hidden-sm hidden-md hidden-lg">
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--digital-xrays" data-toggle="modal"><img src="/assets/services/digital-xrays.jpg" alt="Digital X-Rays" class="card__image">
                 <div class="card__text">
-                    <h3 class="feature__title hidden-sm hidden-md hidden-lg">Care for the<br>Whole Family</h3>
-                    <p class="card__link hidden-sm hidden-md hidden-lg">Learn More</p>
+                    <h5 class="card__title">Digital X-rays</h5>
+                    <p class="card__link">Learn More</p>
                 </div>
-                <div class="card__text top-right">
-                    <h3 class="feature__title hidden-xs">Care for the<br>Whole Family</h3>
-                    <p class="card__link hidden-xs">Learn More</p>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--root-canals" data-toggle="modal"><img src="/assets/services/root-canals.jpg" alt="Root Canals" class="card__image">
+                <div class="card__text">
+                    <h5 class="card__title">Root Canals</h5>
+                    <p class="card__link">Learn More</p>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-6 col-md-3 card" data-target="#modal--surgery" data-toggle="modal"><img src="/assets/services/surgery.jpg" alt="Oral Surgery" class="card__image">
+                <div class="card__text">
+                    <h5 class="card__title">Oral Surgery</h5>
+                    <p class="card__link">Learn More</p>
                 </div>
             </div>
 
