--- a/src/index.twig
+++ b/src/index.twig
@@ -24,9 +24,9 @@
         {# {% include 'molecules/cta__two-to-one.twig' with {
             id: 'cta-one',
             existingPatients: 'true'
-         } %}
+         } %} #}
 
-        {% include 'organisms/about.twig' %} #}
+        {% include 'organisms/about.twig' %}
 
         {# {% include 'organisms/specials--three-card.twig' %}
 
@@ -34,11 +34,11 @@
             id: 'cta-two'
         } %}
 
-        {% include 'organisms/insurance.twig' %} #}
+        {% include 'organisms/insurance.twig' %}
 
         {% include 'organisms/services.twig' %}
 
-        {% include 'molecules/dentures.twig' %}
+        {% include 'molecules/dentures.twig' %} #}
 
         {# <div class="cta " id="cta-three">
             <div class="container center">
