--- a/src/scss/organisms/_about.scss
+++ b/src/scss/organisms/_about.scss
@@ -1,66 +1,38 @@
 #section-about {
-  padding-bottom: 35px;
-  margin-bottom: -2px;
-  padding-top: 30px;
-  // background-color: #dee5d9;
+  .heading {
+    padding: 15px 0;
 
-  @media (min-width: 992px) {
-    margin-top: 10px;
-    background-image: url('/assets/treesBG-1.svg');
-    // background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom center;
-  }
-
-  .heading__title {
-    color: #007ca2;
-    text-align: left;
-    margin-bottom: 0;
-    line-height: 1;
-    margin-top: 0;
-
-    @media (min-width: 992px) {
+    &__title {
       margin-bottom: 0;
-      line-height: 1.2;
-      margin-top: 20px;
-    }
-  }
-
-  .btn-link {
-    padding: 0;
-    background-color: #fff;
-    color: #47c8da;
-    text-decoration: underline;
-  }
-
-  .about-image-fix {
-    @media (min-width: 768px) {
-      height: 700px;
-      margin-top: 15px;
     }
   }
 
   .main {
-    &__name {
-      color: #2e2e2e;
-      font-family: $ff-lato;
-      margin-bottom: 10px;
-      padding-top: 5px;
+    &__title {
+      font-weight: 700;
+      font-family: $ff-unna;
+      font-style: italic;
+      color: #313542;
+      margin: 15px 0 5px;
 
-      @include font-size(28px, 28px, 26px, 26px, 24px);
+      @include font-size(32px, 30px, 30px, 30px, 28px);
 
-      &--title {
-        color: #2e2e2e;
+      &-aboutDDS {
+        color: #313542;
+        font-style: italic;
 
-        @include font-size(28px, 28px, 26px, 26px, 24px);
+        @include font-size(28px, 26px, 26px, 26px, 24px);
       }
     }
 
     &__copy {
-      color: #414b4d;
-      font-family: $ff-open;
-
-      @include font-size(16px, 15px, 16px, 14px, 12px);
+      color: #7a7780;
+      font-size: 20px;
+      font-family: $ff-unna;
     }
+  }
+
+  .associations-carousel {
+    padding-bottom: 45px;
   }
 }
