--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -1,25 +1,32 @@
 <section id="section-about" class="clearfix about">
 
-    <div class="main">
+    <div class="heading center">
+        <h2 class="heading__title">Meet the Doctor</h2>
+    </div>
+
+    <div class="video-slab">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-5">
-                    <div class="column">
-                        <h2 class="heading__title">Meet the Doctor</h2>
-                        <img src="/assets/team/doc-bio.jpg" alt="Dr. B.C. Nelson" class="about-image-fix hidden-md hidden-lg">
-                        <h3 class="main__name">B.C. Nelson, <span class="main__name--title">DDS</span></h3>
-                        <p class="main__copy">Dr. Nelson is a unique small town dentist.. His use of the latest advances in technology - including tooth-colored fillings, CEREC one-visit restorations, and laser dentistry - will help you maintain a lifetime of healthy smiles, and our office's relaxing atmosphere and inviting staff members will make you feel right at home.</p>
-                        <p class="main__copy">Dr. Nelson earned his doctorate from the presitgious Baylor College of Dentistry. He and his wife, Buffie, grew up in Oregon, and they enjoy exploring the beautiful Northwest together.</p>
-
-                        {% include 'molecules/associations__carousel.twig' %}
- 
-                    </div>
-                </div>
-                <div class="col-md-5 col-md-push-1 hidden-xs hidden-sm">
-                    <img src="/assets/team/doc-bio.jpg" alt="Dr. B.C. Nelson">
+                <div class="col-sm-12">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SKqm7Nct1u8" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="main container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h3 class="main__title">Candice T. Arrick, <span class="main__title-aboutDDS">DDS</span></h3>
+                
+                <p class="main__copy">Dr. Arrick was raised in Raleigh and graduated from Sanderson High School. She completed her BS in Biology at Hampton University, and received her dental degree from the University of North Carolina at Chapel Hill. Dr. Arrick is dedicated to staying abreast of the most up-to-date trends and techniques through countless hours of continuing education.</p>
+                <p class="main__copy">Giving back to the community is important to Dr. Arrick, and she has volunteered with the Missions of Mercy, Apex Free Dental Clinic, Wake Smiles, and at the Dental Clinic at the NC State Fair.</p>
+                <p class="main__copy">Dr. Arrick and her husband Collick have three lovely children, Caleb, Cara and Cameron.</p>
+            </div>
+        </div>
+    </div>
+    {# these are the icons on bottom #}
+    {% include 'molecules/associations__carousel.twig' %}
+
 </section>
+
